deploy/kubernetes/tusd-ingress-common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tusd-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: tusd-ip
    networking.gke.io/managed-certificates: tusd-cert
spec:
  rules:
  - http:
      paths:
      - path: /files  # spelling #1
        # tusd allows POST to /files and /files/, to create files. This is a
        # SECURITY risk. Prevent end-user users from POSTing to /files by
        # responding with HTTP 404 if they try
        backend:
          serviceName: http-404-service
          servicePort: 80
      - path: /files/  # spelling #2
        backend:
          serviceName: http-404-service
          servicePort: 80
      - path: /files/*
        # This is the crux of tusd: the actual already-created file uploads.
        # Let users POST to the ones they know the URLs for.
        backend:
          serviceName: tusd-service
          servicePort: 80
